SIXTH-139 -fixed logo link size on mobile

--- a/src/component/HeaderLogo/HeaderLogo.style.scss
+++ b/src/component/HeaderLogo/HeaderLogo.style.scss
@@ -2,10 +2,12 @@
   flex: 1;
   height: 40px;
   text-align: center;
-  margin: 0 200px;
 
   @include before-desktop {
     height: auto;
+  }
+  @include desktop {
+    margin: 0 100px;
   }
 
   .Image {
